Fixed About Me row overlap, fonts changed for smaller screens.

--- a/assets/css/orange.css
+++ b/assets/css/orange.css
@@ -181,20 +181,26 @@ a:hover {
 @media (max-width: 800px) { 
     /* all contents of Mobile.css */
     .sectionTitle {
-      font-size: 70px;
+      font-size: 1.8em;
     }
     .sectionContent {
-      font-size: 25px;
+      font-size: 0.8em;
     }
     .navigation {
         width: 250px;
     }
-    .myimage {
+    /*.myimage {
         height: 200px;
         width: 200px;
-    }
+    }*/
 }
 @media (max-width: 500px) {
+    .sectionTitle {
+      font-size: 1.2em;
+    }
+    .sectionContent {
+      font-size: 0.6em;
+    }
     .navigation {
         width: 200px;
     }
@@ -202,15 +208,15 @@ a:hover {
 @media (min-width: 801px) and (max-height:900px) { 
     /* all contents of LowRes.css */
     .sectionTitle {
-      font-size: 50px;
+      font-size: 2.2em;
     }
     .sectionContent {
-      font-size: 18px;
+      font-size: 0.7em;
     }
-    .myimage {
+    /*.myimage {
         height: 200px;
         width: 200px;
-    }
+    }*/
 }
 @media (min-width: 801px) and (min-height:901px) { 
      /* all contents of HiRes.css */
