--- a/assets/css/yellow.css
+++ b/assets/css/yellow.css
@@ -137,8 +137,8 @@ i {
 
 .scroll_up {
     position: fixed;
-    right: 80px;
-    top: 80px;
+    right: 2em;
+    top: 2em;
     height: 2em;
     width: 2em;
     z-index: 1;
@@ -148,12 +148,13 @@ i {
     border-radius: 50%;
     border-color: #6A696F;
     transition: 0.5s;
+    opacity: 0.85;
 }
 
 .scroll_down {
     position: fixed;
-    right: 80px;
-    bottom: 80px;
+    right: 2em;
+    bottom: 2em;
     height: 2em;
     width: 2em;
     z-index: 1;
@@ -163,18 +164,19 @@ i {
     border-radius: 50%;
     border-color: #6A696F;
     transition: 0.5s;
+    opacity: 0.85;
 }
 
 @media only screen and (max-width: 1100px) {
     .scroll_up {
-        right: 120px;
-        top: 120px;
+        right: 2em;
+        top: 2em;
         width: 3em;
         height: 3em;
     }
     .scroll_down {
-        right: 120px;
-        bottom: 120px;
+        right: 2em;
+        bottom: 2em;
         width: 3em;
         height: 3em;
     }
